// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lozenge (button) applies expanded styles when isOpen is true 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border: none;
  background-color: #D3F5D9;
  color: #004D0D;
}

.c0 svg:last-child {
  -webkit-transition: -webkit-transform 0.3s ease;
  -webkit-transition: transform 0.3s ease;
  transition: transform 0.3s ease;
}

.c0[aria-expanded='true'] svg:last-child {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  -webkit-transition: -webkit-transform 0.3s ease;
  -webkit-transition: transform 0.3s ease;
  transition: transform 0.3s ease;
}

.c0:hover {
  outline: 1px solid #EEFCF0;
}

.c0:focus {
  outline: 3px solid #88D895;
}

.c1 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<button
  aria-expanded="true"
  aria-haspopup="true"
  class="c0"
  type="button"
>
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <g
      fill="none"
    >
      <path
        d="M0 0h24v24H0z"
      />
      <path
        d="M0 0h24v24H0z"
      />
    </g>
    <path
      d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89l-2.26-.97c-.65-.28-.81-1.13-.31-1.63l3.01-3.01c.47-.47 1.15-.68 1.81-.55zm1.49 10.16c.3.3.74.38 1.12.2 1.16-.54 3.65-1.81 5.26-3.42 4.59-4.59 4.63-8.33 4.36-9.93a.98.98 0 0 0-.79-.79c-1.6-.27-5.34-.23-9.93 4.36-1.61 1.61-2.87 4.1-3.42 5.26-.18.38-.09.83.2 1.12zm6.97-1.7c-2.29 2.04-5.58 3.44-5.89 3.57l.97 2.26c.28.65 1.13.81 1.63.31l3.01-3.01c.47-.47.68-1.15.55-1.81zm-8.71 2.6a3 3 0 0 1-.82 2.71c-.77.77-3.16 1.34-4.71 1.64-.69.13-1.3-.48-1.17-1.17.3-1.55.86-3.94 1.64-4.71a3 3 0 0 1 2.71-.82c1.17.22 2.13 1.18 2.35 2.35M13 9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2"
    />
  </svg>
  Menu
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
    />
  </svg>
</button>
`;

exports[`render Lozenge as button (popover variant) 1`] = `
.c0 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border: none;
  background-color: #D3F5D9;
  color: #004D0D;
}

.c0 svg:last-child {
  -webkit-transition: -webkit-transform 0.3s ease;
  -webkit-transition: transform 0.3s ease;
  transition: transform 0.3s ease;
}

.c0[aria-expanded='true'] svg:last-child {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
  -webkit-transition: -webkit-transform 0.3s ease;
  -webkit-transition: transform 0.3s ease;
  transition: transform 0.3s ease;
}

.c0:hover {
  outline: 1px solid #EEFCF0;
}

.c0:focus {
  outline: 3px solid #88D895;
}

.c1 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<button
  aria-expanded="false"
  aria-haspopup="true"
  class="c0"
  type="button"
>
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <g
      fill="none"
    >
      <path
        d="M0 0h24v24H0z"
      />
      <path
        d="M0 0h24v24H0z"
      />
    </g>
    <path
      d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89l-2.26-.97c-.65-.28-.81-1.13-.31-1.63l3.01-3.01c.47-.47 1.15-.68 1.81-.55zm1.49 10.16c.3.3.74.38 1.12.2 1.16-.54 3.65-1.81 5.26-3.42 4.59-4.59 4.63-8.33 4.36-9.93a.98.98 0 0 0-.79-.79c-1.6-.27-5.34-.23-9.93 4.36-1.61 1.61-2.87 4.1-3.42 5.26-.18.38-.09.83.2 1.12zm6.97-1.7c-2.29 2.04-5.58 3.44-5.89 3.57l.97 2.26c.28.65 1.13.81 1.63.31l3.01-3.01c.47-.47.68-1.15.55-1.81zm-8.71 2.6a3 3 0 0 1-.82 2.71c-.77.77-3.16 1.34-4.71 1.64-.69.13-1.3-.48-1.17-1.17.3-1.55.86-3.94 1.64-4.71a3 3 0 0 1 2.71-.82c1.17.22 2.13 1.18 2.35 2.35M13 9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2"
    />
  </svg>
  Popover
  <svg
    aria-hidden="true"
    class="c1"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
    />
  </svg>
</button>
`;

exports[`render alpha Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #FFF0BF;
  color: #313440;
}

.c1 svg {
  fill: #CC720A;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M19 8h-1.81a6 6 0 0 0-1.82-1.96l.93-.93a.996.996 0 1 0-1.41-1.41l-1.47 1.47C12.96 5.06 12.49 5 12 5s-.96.06-1.41.17L9.11 3.7A.996.996 0 1 0 7.7 5.11l.92.93C7.88 6.55 7.26 7.22 6.81 8H5c-.55 0-1 .45-1 1s.45 1 1 1h1.09c-.05.33-.09.66-.09 1v1H5c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .34.04.67.09 1H5c-.55 0-1 .45-1 1s.45 1 1 1h1.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H19c.55 0 1-.45 1-1s-.45-1-1-1h-1.09c.05-.33.09-.66.09-1v-1h1c.55 0 1-.45 1-1s-.45-1-1-1h-1v-1c0-.34-.04-.67-.09-1H19c.55 0 1-.45 1-1s-.45-1-1-1m-6 8h-2c-.55 0-1-.45-1-1s.45-1 1-1h2c.55 0 1 .45 1 1s-.45 1-1 1m0-4h-2c-.55 0-1-.45-1-1s.45-1 1-1h2c.55 0 1 .45 1 1s-.45 1-1 1"
    />
  </svg>
  Alpha
</div>
`;

exports[`render beta Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #DBE3FE;
  color: #2852EB;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M20.54 17.73 15 11V5h1c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1h1v6l-5.54 6.73c-.32.39-.46.83-.46 1.27.01 1.03.82 2 2 2h14c1.19 0 2-.97 2-2 0-.44-.14-.88-.46-1.27"
    />
  </svg>
  Beta
</div>
`;

exports[`render default Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #D3F5D9;
  color: #004D0D;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <g
      fill="none"
    >
      <path
        d="M0 0h24v24H0z"
      />
      <path
        d="M0 0h24v24H0z"
      />
    </g>
    <path
      d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89l-2.26-.97c-.65-.28-.81-1.13-.31-1.63l3.01-3.01c.47-.47 1.15-.68 1.81-.55zm1.49 10.16c.3.3.74.38 1.12.2 1.16-.54 3.65-1.81 5.26-3.42 4.59-4.59 4.63-8.33 4.36-9.93a.98.98 0 0 0-.79-.79c-1.6-.27-5.34-.23-9.93 4.36-1.61 1.61-2.87 4.1-3.42 5.26-.18.38-.09.83.2 1.12zm6.97-1.7c-2.29 2.04-5.58 3.44-5.89 3.57l.97 2.26c.28.65 1.13.81 1.63.31l3.01-3.01c.47-.47.68-1.15.55-1.81zm-8.71 2.6a3 3 0 0 1-.82 2.71c-.77.77-3.16 1.34-4.71 1.64-.69.13-1.3-.48-1.17-1.17.3-1.55.86-3.94 1.64-4.71a3 3 0 0 1 2.71-.82c1.17.22 2.13 1.18 2.35 2.35M13 9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2"
    />
  </svg>
  Lozenge
</div>
`;

exports[`render deprecated Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #FEDBDE;
  color: #80000B;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-3.3 0-6 2.7-6 6s2.7 6 6 6 6-2.7 6-6-2.6-6-6-6m2 7h-4c-.55 0-1-.45-1-1s.45-1 1-1h4c.55 0 1 .45 1 1s-.45 1-1 1"
    />
  </svg>
  Deprecated
</div>
`;

exports[`render legacy Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #D9DCE9;
  color: #313440;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="m9.84 16.47 1.91-1.91 1.91 1.91c.29.29.77.29 1.06 0s.29-.77 0-1.06l-1.91-1.91 1.91-1.91c.29-.29.29-.77 0-1.06a.754.754 0 0 0-1.06 0l-1.91 1.91-1.91-1.91a.754.754 0 0 0-1.06 0c-.29.29-.29.77 0 1.06l1.91 1.91-1.91 1.91c-.29.29-.29.77 0 1.06s.77.29 1.06 0M19 3h-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1H8V2c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 19a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m-1 16H6c-.55 0-1-.45-1-1V8h14v10c0 .55-.45 1-1 1"
    />
  </svg>
  Legacy
</div>
`;

exports[`render new Lozenge 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border-radius: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.25rem;
  line-height: 1.25rem;
  text-align: center;
  padding-block: 0.25rem;
  vertical-align: middle;
  padding-inline-start: 0.5rem;
  white-space: nowrap;
  padding-inline-end: 0.75rem;
  background-color: #D3F5D9;
  color: #004D0D;
}

.c2 {
  vertical-align: middle;
  height: 1.25rem;
  width: 1.25rem;
}

<div
  class="c0 c1"
>
  <svg
    aria-hidden="true"
    class="c2"
    fill="currentColor"
    height="24"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="24"
  >
    <g
      fill="none"
    >
      <path
        d="M0 0h24v24H0z"
      />
      <path
        d="M0 0h24v24H0z"
      />
    </g>
    <path
      d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89l-2.26-.97c-.65-.28-.81-1.13-.31-1.63l3.01-3.01c.47-.47 1.15-.68 1.81-.55zm1.49 10.16c.3.3.74.38 1.12.2 1.16-.54 3.65-1.81 5.26-3.42 4.59-4.59 4.63-8.33 4.36-9.93a.98.98 0 0 0-.79-.79c-1.6-.27-5.34-.23-9.93 4.36-1.61 1.61-2.87 4.1-3.42 5.26-.18.38-.09.83.2 1.12zm6.97-1.7c-2.29 2.04-5.58 3.44-5.89 3.57l.97 2.26c.28.65 1.13.81 1.63.31l3.01-3.01c.47-.47.68-1.15.55-1.81zm-8.71 2.6a3 3 0 0 1-.82 2.71c-.77.77-3.16 1.34-4.71 1.64-.69.13-1.3-.48-1.17-1.17.3-1.55.86-3.94 1.64-4.71a3 3 0 0 1 2.71-.82c1.17.22 2.13 1.18 2.35 2.35M13 9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2"
    />
  </svg>
  New
</div>
`;
